<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_total_per_person"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPerPerson"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/label_bill_total_tax"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/billTotalWithTax"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/billTotalWithTax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/pale_green"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_tip_percent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/billTotalWithTax" />

    <RadioGroup
        android:id="@+id/radioTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/billTotalWithTax"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radio_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_radio_12"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_radio_15"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_radio_18"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_radio_20"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/label_tip_amount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipAmount"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/pale_grey_background"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/billTotalWithTax"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/radioTip" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_total_with_tip"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalWithTip"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/totalWithTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/pale_grey_background"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tipAmount"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_number_people"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfPeople"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <EditText
        android:id="@+id/numberOfPeople"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/pale_green"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/goButton"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/totalWithTip" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onSplitBillButtonClick"
        android:text="@string/label_go_button"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfPeople"
        app:layout_constraintEnd_toEndOf="@+id/totalWithTip" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/pale_grey_background"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/goButton"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPeople" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_overage"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/overage"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/pale_grey_background"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/totalPerPerson"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/totalPerPerson" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClearButtonClick"
        android:text="@string/label_clear_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/overage"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/overage" />

</androidx.constraintlayout.widget.ConstraintLayout>